# KZW

./: .gitignore  README.md
lab1_264193_264238/: 24_dane1.txt  lab1.cpp  old_lab1.cpp
lab1_264193_264238/output/: lab1
lab1_264193_264238/output/lab1.dSYM/Contents/Resources/DWARF/: lab1
lab1_264193_264238/output/lab1.dSYM/Contents/Resources/Relocations/aarch64/: lab1.yml
lab1_Zygadlo_Tymczyszyn/: klasa.cpp  lab1.cpp
lab1_rpq/: .gitignore  CMakeLists.txt  main.cpp  old_lab1.cpp
lab1_rpq/include/: Solution.hpp
lab1_rpq/src/: Solution.cpp
lab1_rqp/: main.cpp
lab1_rqp/include/: Solution.hpp
lab1_rqp/instructions/: rpg.data.txt  rpg.zasady.txt
lab1_rqp/src/: Solution.cpp
output/: read
output/read.dSYM/Contents/Resources/DWARF/: read
output/read.dSYM/Contents/Resources/Relocations/aarch64/: read.yml
